--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
   margin: 0;box-sizing: border-box;
   font-family: sans-serif;
 }
+body{
+  overflow: hidden;
+}
 i{
   color: grey;
+  font-size: 20px;
 }
 h1{
   font-size: 16px;
@@ -108,15 +112,22 @@ header{
   font-size: 12px;
 }
 .search_box{
-  border: 1px solid lightgrey;
-  width: 94%;
-  height: 70%;
-  margin-left: 3%;
-  margin-top: 2%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-
+  border: 1px solid lightgrey;
+  width: 90%;
+  margin-left: 5%;
+  height: 70%;
+  margin-top: 3%;
+  border-radius: 5px;
+}
+.search_box input{
+  border: 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
 }
 .search i{
   margin-left: 10px;
@@ -125,8 +136,15 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow-y: auto;
+  overflow-y: scroll;
+  max-height: 60vh;
   transition: all;
+  scrollbar-width: none;
+
+}
+.chat::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
 }
 .chat :hover{
   background-color: lightgrey;
@@ -139,15 +157,37 @@ header{
   align-items: center;
   border-bottom: 1px solid lightgrey;
 }
-.chat1 img{
+.chat img{
   height: 50px;
   width: 15%;
   margin: 5px 20px;
   border-radius: 100%;
 }
 
-.chat1 p{
+.chat p{
   color: grey;
+}
+
+.chat2{
+  height: 10%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid lightgrey;
+}
+.chat3{
+  height: 10%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid lightgrey;
+}
+.chat4{
+  height: 10%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid lightgrey;
 }
 .nome{
   width: 15%;
@@ -158,9 +198,13 @@ header{
 .ultimo_accesso p{
   font-size: 12px;
 }
+
+
+
+/*  parte destra */
 .right{
   height: 100%;
-  background-color: white;
+  background-image: url(../img/mine.jpg);
 }
 .chat_attiva{
   display: flex;
@@ -198,8 +242,17 @@ header{
 .messaggi{
   display: inline-block;
   width: 100%;
-  margin-top: 15%;
+  max-height: 70vh;
+  margin-top: 10%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  background-size: 100px 100px;
 }
+.messaggi::-webkit-scrollbar{
+  width: 0;
+  height: 0;
+}
+
 .messaggi p{
   font-size: 20px;
   color: black;
@@ -212,9 +265,10 @@ header{
   float: right;
   clear: both;
   text-align: center;
-  background-color: green;
+  background-color: lightgreen;
   margin-right:40px;
   padding: 10px;
+  margin-bottom: 50px;
 }
 .messaggi_ricevuti{
   width: 40%;
@@ -224,10 +278,43 @@ header{
   float: left;
   clear: both;
   text-align: center;
-  background-color: grey;
+  background-color: white;
   margin-left: 40px;
   padding: 10px;
+  margin-bottom: 50px;
+
 }
 .messaggi p{
   font-size: 15px;
+}
+.send_message{
+  height: 10%;
+  width: 52%;
+  position: fixed;
+  bottom: 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+}
+.emoji{
+  width: 10%;
+  display: flex;
+  justify-content: center;
+}
+.send{
+  width: 80%;
+}
+.send input{
+  font-size: 15px;
+  color: grey;
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid lightgrey;
+}
+.vocal{
+  width: 10%;
+  display: flex;
+  justify-content: center;
 }
