--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,9 @@
 *{
   padding: 0;
   margin: 0;box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
-body{
-  overflow: hidden;
-}
+
 i{
   color: grey;
   font-size: 20px;
@@ -48,17 +46,20 @@ a{
 .left{
   width: 35%;
   background-color: white;
+  overflow: hidden;
 }
 .right{
   width: 65%;
+  overflow: hidden;
 }
 
 /*   PARTE SINISTRA WEB APP */
 header{
-  height: 10%;
+  height: 60px;
   display: flex;
   background-color:	#EEE5DE;
   border-right: 1px solid grey;
+  overflow: hidden;
 }
 .foto{
   width: 60%;
@@ -93,8 +94,9 @@ header{
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 15%;
+  height: 70px;
   background-color: #40E0D0;
+  overflow: hidden;
 }
 .notifiche i{
   display: flex;
@@ -116,12 +118,14 @@ header{
   text-decoration: underline;
 }
 
-/*   SEARCH   */
+/*   SEARCH CHAT   */
 .search{
   display: flex;
-  height: 8%;
+  height: 50px;
+  width: 100%;
   margin-bottom: 5px;
   background-color: 	#EEE5DE;
+  overflow: hidden;
 }
 .search h2{
   color: grey;
@@ -139,6 +143,7 @@ header{
   margin-top: 2%;
   border-radius: 7px;
   background-color: white;
+  overflow: hidden;
 }
 .search_box input{
   border: 0px;
@@ -156,19 +161,15 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow-y: scroll;
-  max-height: 59vh;
-  transition: all;
+  overflow: auto;
+  max-height: 400px;
   scrollbar-width: none;
 }
 .chat::-webkit-scrollbar {
     width: 0;
     height: 0;
 }
-.chat :hover{
-  background-color: lightgrey;
-  opacity: 0.9;
-}
+
 .anteprima_chat{
   height: 10%;
   display: flex;
@@ -204,10 +205,11 @@ header{
 .chat_attiva{
   display: flex;
   justify-content: space-between;
-  height: 9%;
+  height: 60px;
   width: 52%;
   background-color:#EEE5DE;
   position: fixed;
+  overflow: hidden;
 }
 .info_contatto{
   width: 50%;
@@ -263,7 +265,7 @@ header{
   background-color: lightgreen;
   margin-right:40px;
   padding: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 .messaggi_ricevuti{
   width: 40%;
@@ -276,7 +278,7 @@ header{
   background-color: white;
   margin-left: 40px;
   padding: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 
 }
 .messaggi p{
@@ -285,7 +287,7 @@ header{
 
 /*   INPUT INVIO MESSAGGI */
 .send_message{
-  height: 10%;
+  height: 50px;
   width: 52%;
   position: fixed;
   bottom: 5%;
